# hab-cpp-gtest-cmake-example

habitat/: plan.sh
main/: main.cpp
test/: CMakeLists.txt
test/testfoo/: CMakeLists.txt
